refactor controllers and services, added docker-compose file